--- a/app/src/main/res/layout/notes_list_activity.xml
+++ b/app/src/main/res/layout/notes_list_activity.xml
@@ -6,33 +6,28 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.vladislav.notebook.NotesListActivity"
-    android:padding="@dimen/common_padding">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <EditText
-            android:id="@+id/editText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Type a note mTitle to find."
-            android:inputType="textPersonName"
-            android:text="Search" />
-
-    </RelativeLayout>
+    android:padding="@dimen/common_padding"
+    android:background="@color/colorWhite">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="10"
-        android:background="@drawable/customborder">
+        android:layout_weight="10">
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         </android.support.v7.widget.RecyclerView>
+
+        <TextView
+            android:id="@+id/recycler_empty_list_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add a note by clicking + button"
+            android:layout_centerInParent="true"/>
+
+
     </RelativeLayout>
 
     <RelativeLayout
@@ -49,23 +44,26 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:srcCompat="@android:drawable/ic_input_add" />
+                app:srcCompat="@android:drawable/ic_input_add"
+                android:backgroundTint="@color/colorWhite"/>
 
             <ImageButton
-                android:id="@+id/cancel_button"
+                android:id="@+id/delete_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@id/add_button"
                 android:layout_weight="1"
-                app:srcCompat="@android:drawable/ic_delete" />
+                app:srcCompat="@android:drawable/ic_delete"
+                android:backgroundTint="@color/colorWhite"/>
 
             <ImageButton
-                android:id="@+id/edit_button"
+                android:id="@+id/search_button"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/cancel_button"
+                android:layout_height="fill_parent"
+                android:layout_toRightOf="@id/add_button"
                 android:layout_weight="1"
-                app:srcCompat="@android:drawable/ic_menu_edit" />
+                app:srcCompat="@drawable/ic_search_black_24dp"
+                android:backgroundTint="@color/colorWhite"/>
 
         </LinearLayout>
 
