--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <resources>
-    <dimen name="common_padding">16dp</dimen>
+    <dimen name="common_padding">10dp</dimen>
     <dimen name="notes_list_image_size">40dp</dimen>
-    <dimen name="notes_list_item_margin">10dp</dimen>
-    <dimen name="notes_list_item_image_to_title_margin">10dp</dimen>
+    <dimen name="notes_search_to_list_margin">0dp</dimen>
+    <dimen name="search_edit_text_height">10dp</dimen>
 </resources>
