--- a/app/src/main/res/layout/note_activity.xml
+++ b/app/src/main/res/layout/note_activity.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:layout_margin="@dimen/common_padding"
     android:orientation="vertical"
-    tools:context="com.example.vladislav.notebook.NotesListActivity">
+    tools:context="com.example.vladislav.notebook.NotesListActivity"
+    android:background="@color/colorWhite">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -24,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/note_title_text_view"
             android:layout_marginBottom="@dimen/common_padding"
-            android:background="@drawable/customborder"
+            android:background="@drawable/custom_border_note_containter"
             android:ems="10"
             android:hint="Type a note title"
             android:inputType="textPersonName" />
@@ -49,11 +50,11 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/note_content_title_text_view"
             android:layout_weight="1"
+            android:background="@drawable/custom_border_note_containter"
             android:ems="10"
             android:gravity="start"
             android:hint="Type a text for the note"
-            android:inputType="textMultiLine"
-            android:background="@drawable/customborder"/>
+            android:inputType="textMultiLine" />
 
     </LinearLayout>
 
@@ -72,13 +73,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                app:srcCompat="@android:drawable/checkbox_on_background" />
+                app:srcCompat="@android:drawable/checkbox_on_background"
+                android:backgroundTint="@color/colorWhite"/>
 
             <ImageButton
                 android:id="@+id/cancel_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:backgroundTint="@color/colorWhite"
                 app:srcCompat="@android:drawable/ic_delete" />
 
         </LinearLayout>
