--- a/app/src/main/res/layout/note_list_item.xml
+++ b/app/src/main/res/layout/note_list_item.xml
@@ -30,11 +30,19 @@
         android:layout_alignBottom="@+id/pen_image_view" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/divider_image_view"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        app:srcCompat="@android:color/transparent"
+        android:layout_below="@id/pen_image_view"
         android:background="@color/colorAccent"
-        android:layout_below="@id/pen_image_view"/>
+        app:srcCompat="@android:color/transparent" />
+
+    <TextView
+        android:id="@+id/modification_timing_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="4dp"/>
 
 </RelativeLayout>
