Code review issues removed. Search button interface operating implemented.

--- a/app/src/main/res/layout/note_activity.xml
+++ b/app/src/main/res/layout/note_activity.xml
@@ -77,7 +77,7 @@
                 android:backgroundTint="@color/colorWhite"/>
 
             <ImageButton
-                android:id="@+id/cancel_button"
+                android:id="@+id/cancel_search_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
