--- a/app/src/main/res/layout/notes_list_activity.xml
+++ b/app/src/main/res/layout/notes_list_activity.xml
@@ -9,6 +9,15 @@
     android:padding="@dimen/common_padding"
     android:background="@color/colorWhite">
 
+    <EditText
+        android:id="@+id/search_edit_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="Type title to search a note"
+        android:visibility="gone"/>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -60,7 +69,7 @@
                 android:id="@+id/search_button"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:layout_toRightOf="@id/add_button"
+                android:layout_toRightOf="@id/delete_button"
                 android:layout_weight="1"
                 app:srcCompat="@drawable/ic_search_black_24dp"
                 android:backgroundTint="@color/colorWhite"/>
