--- a/app/src/main/res/layout/notes_list_activity.xml
+++ b/app/src/main/res/layout/notes_list_activity.xml
@@ -57,6 +57,15 @@
                 android:backgroundTint="@color/colorWhite"/>
 
             <ImageButton
+                android:id="@+id/commit_search_button"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
+                app:srcCompat="@android:drawable/checkbox_on_background"
+                android:backgroundTint="@color/colorWhite"
+                android:visibility="gone"/>
+
+            <ImageButton
                 android:id="@+id/delete_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
