--- a/app/src/main/res/layout/note_activity.xml
+++ b/app/src/main/res/layout/note_activity.xml
@@ -5,9 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="@dimen/common_padding"
+    android:background="@color/colorWhite"
     android:orientation="vertical"
-    tools:context="com.example.vladislav.notebook.NotesListActivity"
-    android:background="@color/colorWhite">
+    tools:context="com.example.vladislav.notebook.noteslist.NotesListActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
             android:id="@+id/note_title_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Note title:" />
+            android:text="@string/note_title_inscription" />
 
         <EditText
             android:id="@+id/note_title_edit_text"
@@ -27,7 +27,7 @@
             android:layout_marginBottom="@dimen/common_padding"
             android:background="@drawable/custom_border_note_containter"
             android:ems="10"
-            android:hint="Type a note title"
+            android:hint="@string/note_title_hint"
             android:inputType="textPersonName" />
 
     </RelativeLayout>
@@ -42,7 +42,7 @@
             android:id="@+id/note_content_title_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Note content:" />
+            android:text="@string/note_text_inscription" />
 
         <EditText
             android:id="@+id/note_content_edit_text"
@@ -53,7 +53,7 @@
             android:background="@drawable/custom_border_note_containter"
             android:ems="10"
             android:gravity="start"
-            android:hint="Type a text for the note"
+            android:hint="@string/note_text_hint"
             android:inputType="textMultiLine" />
 
     </LinearLayout>
@@ -73,11 +73,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
-                app:srcCompat="@android:drawable/checkbox_on_background"
-                android:backgroundTint="@color/colorWhite"/>
+                android:backgroundTint="@color/colorWhite"
+                app:srcCompat="@android:drawable/checkbox_on_background" />
 
             <ImageButton
-                android:id="@+id/cancel_search_button"
+                android:id="@+id/cancel_operation_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
