--- a/app/src/main/res/layout/note_activity.xml
+++ b/app/src/main/res/layout/note_activity.xml
@@ -77,7 +77,7 @@
                 app:srcCompat="@android:drawable/checkbox_on_background" />
 
             <ImageButton
-                android:id="@+id/cancel_operation_button"
+                android:id="@+id/cancel_save_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
