--- a/app/src/main/res/layout/note_activity.xml
+++ b/app/src/main/res/layout/note_activity.xml
@@ -7,7 +7,8 @@
     android:layout_margin="@dimen/common_padding"
     android:background="@color/colorWhite"
     android:orientation="vertical"
-    tools:context="com.example.vladislav.notebook.noteslist.NotesListActivity">
+    tools:context="com.example.vladislav.notebook.noteslist.NotesListActivity"
+    android:id="@+id/note_activity">
 
     <RelativeLayout
         android:layout_width="match_parent"
